# repo_A

./: .gitignore  .gitmodules  README.md  pyproject.toml
src/: __init__.py  module_a.py
tests/: __init__.py  test_module_a.py
