[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-a"
version = "0.1.0"
description = "Example Parent Repository A to use sub-module repo_b and repo_c"
authors = [
    {name = "Your Name", email = "you@example.com"},
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "tqdm",
    "pyyaml",
    "opencv-python",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools]
package-dir = { "" = "src" }
packages = { find = { where = ["src"] } }
